--- a/cake.html
+++ b/cake.html
@@ -18,6 +18,8 @@
 <body>
     <h1 class='title'>Світ пончиків</h1>
     <img class="img" src="/uploads/2023/02/donut.png">
+    <p> Привіт з Logika</p>
+    <p> Привіт з Logika</p>
 
 </body>
 </html>
